<resources>
    <string name="app_name">dma-labo-4</string>

    <string name="ble_menu_scan_start">Recherche</string>
    <string name="ble_menu_scan_stop">Annuler</string>
    <string name="ble_menu_disconnect">Déconnexion</string>

    <string name="ble_scan_results_empty">Veuillez lancer le scan <i>Bluetooth Low Energy</i> en appuyant ci-dessus</string>

    <string name="ble_currenttime_title">Current time</string>
    <string name="ble_currenttime_set">Set time</string>
    <string name="ble_clickcounter_title">Click counter</string>
    <string name="ble_temperature_title">Température</string>
    <string name="ble_temperature_read">Read</string>
    <string name="ble_sendvalue_title">Envoi de valeur</string>
    <string name="ble_sendvalue_send">Send</string>
    <string name="clicks_count">Nbre de clics :</string>
    <string name="temp_label">Température :</string>
    <string name="current_time_label">Heure actuelle</string>
    <string name="click_label">Nombre de clicks :</string>
    <string name="update_time_btn">Mettre à jour l\'heure</string>
    <string name="envoyer_le_nombre">Envoyer le nombre</string>
    <string name="read_temp">Lire la température</string>
    <string name="number">Nombre</string>

</resources>