<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_connected_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/temp_label"
        android:text="@string/temp_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/temp_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/click_label"
        android:text="@string/click_label"
        app:layout_constraintTop_toBottomOf="@id/temp_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/clicks_value"
        app:layout_constraintTop_toBottomOf="@id/temp_value"
        app:layout_constraintStart_toEndOf="@id/click_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/current_time_label"
        android:text="@string/current_time_label"
        app:layout_constraintTop_toBottomOf="@id/click_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/current_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clicks_value"
        app:layout_constraintStart_toEndOf="@id/current_time_label"
        />

    <EditText
        android:hint="@string/number"
        android:inputType="number"
        android:id="@+id/number_to_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/update_time_btn"
        app:layout_constraintEnd_toStartOf="@id/send_button_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_button_click"
         />

    <Button
        android:id="@+id/send_button_click"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/update_time_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/number_to_send"
        android:text="@string/envoyer_le_nombre" />

    <Button
        android:id="@+id/update_time_btn"
        android:text="@string/update_time_btn"
        app:layout_constraintBottom_toTopOf="@id/read_temp_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/read_temp_btn"
        android:text="@string/read_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

